--- a/preamble.tex
+++ b/preamble.tex
@@ -149,7 +149,7 @@
     commentstyle=\it\color{MidnightBlue},
     stringstyle=\color{Maroon},
     keywordstyle=[2]\bf\color{ForestGreen},
-%   keywordstyle=[3]\color{Bittersweet},
+    keywordstyle=[3]\color{Bittersweet},
 %   keywordstyle=[4]\color{RoyalPurple},
     captionpos=b,
     aboveskip=2\medskipamount,
@@ -167,8 +167,8 @@
 \lstdefinestyle{haskell}{
     language=Haskell,
     basicstyle=\scriptsize\ttfamily,
-    deletekeywords={class,data,default,deriving,instance,where,case,of},
-    morekeywords={[2]class,data,default,deriving,instance,where},
+    deletekeywords={case,class,data,default,deriving,instance,of,type,where},
+    morekeywords={[2]class,data,default,deriving,family,instance,type,where},
     morekeywords={[3]case,of},
     literate=
         {\\}{{$\lambda$}}1
