--- a/sec-5-optimisation.tex
+++ b/sec-5-optimisation.tex
@@ -1233,8 +1233,12 @@ data Extend aenv aenv' where
     PushEnv :: Arrays a => Extend aenv aenv' -> PreOpenAcc OpenAcc aenv' a -> Extend aenv (aenv', a)
 \end{lstlisting}
 %
-This extended environment describes how to connect the environment of the
-original term which we are currently deforesting (\texttt{aenv}), with the new
+In the style of the de Bruijn indices used for projecting environment variables
+(\S\derp), \texttt{Extend} uses an inductive notion of tuples as heterogeneous
+\emph{snoc} lists. In contrast to environment indices, the base case does not
+refer to an empty environment, but instead the arbitrary environment to which we
+are extending. This witnesses how to connect the environment of the original
+term which we are currently deforesting (of type \texttt{aenv}), with the new
 terms being output by the deforester (\texttt{aenv'}). Binding these expressions
 to the term output by the deforester yields a completed term of the correct
 type.
@@ -1322,6 +1326,7 @@ delay :: Arrays a => PreOpenAcc OpenAcc aenv a -> DelayedAcc aenv a
 What operations should \texttt{DelayedAcc} encode? The base case is just to
 store a subterm, representing real manifest array data.
 %
+\marginnote{type tags in DelayedAcc}
 \begin{lstlisting}[style=haskell]
 data DelayedAcc aenv a where
     Done  :: Arrays a
@@ -1370,6 +1375,16 @@ does. This ensures that \texttt{Step} can always be fused into \emph{consumer}
 operations, and the embedded producer will simply access the input data via
 array indexing.
 
+The astute reader may wonder; can \texttt{Step} subsume the rule of
+\texttt{Done} by specifying the identity function for the value and index
+transformation? This would greatly simplify the implementation since we would
+only need to account for the interaction of two constructions. Unfortunately
+this is not possible, since \texttt{Done} produces a term of of type in the
+class \texttt{Arrays} rather than a single \texttt{Array}. \texttt{Step} is not
+able to satisfy this constraint, which is required to support functionality such
+as tuples of arrays and the introduction thereof, so three intermediate forms
+are needed.
+
 The delayed representation can then be translated back into core language
 operations by adding any delayed environment bindings to the term and outputting
 an appropriate collective operator representative of the arguments to the
@@ -1407,9 +1422,9 @@ mapD :: (Shape sh, Elt a, Elt b)
      -> DelayedAcc aenv (Array sh a)
      -> DelayedAcc aenv (Array sh b)
 mapD f acc = case acc of
-  Yield env sh g        -> Yield env sh (sinkF env f `compose` g)
-  Step env sh ix g a    -> Step env sh ix (sinkF env f `compose` g) a
-  Done env a            -> Step env' (arrayShape ZeroIdx) identity (sinkF env' f) ZeroIdx
+  Yield env sh g        -> Yield env sh (liftF env f `compose` g)
+  Step env sh ix g a    -> Step env sh ix (liftF env f `compose` g) a
+  Done env a            -> Step env' (arrayShape ZeroIdx) identity (liftF env' f) ZeroIdx
     where env' = env `PushEnv` a        -- introduce \emph{a} as the outermost bound variable; \texttt{ZeroIdx}
 \end{lstlisting}
 %
@@ -1420,12 +1435,17 @@ section~\ref{sec:elements_of_style}. Let us step through each of the components
 introduced here.
 
 
-\subsubsection{Function Composition}
+\paragraph{Function Composition}
 
 Beginning in familiar territory, \texttt{compose} is the equivalent of function
 composition (\texttt{(.)}) for core language terms. This critical piece of kit
 allows us to combine unary scalar functions, and is based on the simultaneous
-substitution machinery developed earlier (\S\ref{sec:substitution}). 
+substitution machinery developed earlier
+(\S\ref{sec:substitution}).\footnote{Annoyingly, we also require a second
+catch-all case to suppress a compilation warning about unmatched patterns,
+because GHC's type checker can not determine that the function type prohibits
+any valid term except those caught by this single case. We elide the impossible
+case for brevity.}
 %
 \begin{lstlisting}[style=haskell]
 compose :: Elt c
@@ -1433,13 +1453,9 @@ compose :: Elt c
         -> PreOpenFun acc env aenv (a -> b)
         -> PreOpenFun acc env aenv (a -> c)
 compose (Lam (Body f)) (Lam (Body g)) = Lam (Body (substitute f g))
-compose _              _              = error "compose: impossible evaluation"
 \end{lstlisting}
+% compose _              _              = error "compose: impossible evaluation"
 %
-Annoyingly, the second case is required simply to suppress a compilation
-warning; GHC's type checker can not determine that the type of the function
-prohibits any valid term except that caught by the first pattern.
-
 The real work is done by \texttt{substitute}, which replaces an expression that
 uses the top environment variable with another, moving variables around as
 appropriate. We must be careful to \texttt{let}-bind the result of the first
@@ -1460,12 +1476,12 @@ substitute f g = Let g (rebuild split f)
 \end{lstlisting}
 
 
-\subsubsection{Lifting}
+\paragraph{Lifting}
 
 The second piece of machinery hard at work in the \texttt{map}-fusion
-implementation of listing~\ref{lst:map_fusion} is that of \texttt{sinkF}, which
+implementation of listing~\ref{lst:map_fusion} is that of \texttt{liftF}, which
 is busy moving terms from one scope to another. Why is this necessary? If we
-want to combine terms --- whether that be scalar function composition or as
+want to combine terms --- for example for scalar function composition or as
 arguments to a collective array operation --- we require that the context of the
 expressions be the same, which ensures they refer to the same environment
 variables.
@@ -1478,20 +1494,130 @@ underneath the extra bindings carried by \texttt{Extend}. If we wish to combine
 these terms with one in the external context \texttt{aenv}, we need to shift all
 the variable indices along and create enough space for the extra bindings that
 will be introduced from the extend environment. This is the job of sinking; to
-weaken a term by a set of indices specified by an external witness.
-% 
+weaken a term by a number of indices specified by an external witness:
+%
 \begin{lstlisting}[style=haskell]
-sink :: Extend env env'
+lift :: Extend env env'
      -> Idx env  t
      -> Idx env' t
-sink BaseEnv       = id
-sink (PushEnv e _) = SuccIdx . sink e
-
-weakenBy :: (forall t'. Idx env t' -> Idx env' t')
-         -> Term env  t
-         -> Term env' t
-weakenBy = ...
+lift BaseEnv       = id
+lift (PushEnv e _) = SuccIdx . lift e
 \end{lstlisting}
+%
+Which we can then plug into \texttt{rebuild} from the simultaneous substitution
+toolkit to shift all variables in the term.\\
+%
+% \marginnote{use of varIn is ambiguous in choice of Syntactic?}
+% \begin{lstlisting}[style=haskell]
+% weakenBy :: (forall t'. Idx env t' -> Idx env' t')
+%          -> Term env  t
+%          -> Term env' t
+% weakenBy k = rebuild (Var . k)
+% \end{lstlisting}
+
+\noindent At long last we have implemented our \texttt{map/map} fusion rule.
+What of the other operators outlined in section~\ref{sec:elements_of_style}? The
+process for combining two index space transforms follows in precisely the same
+manner as \texttt{mapD}. Fusing \texttt{transpose} operations can be done by
+simply sequencing the index transformation and value transformation steps with
+these two functions, and \texttt{generate} is trivially rewritten into a
+\texttt{Yield} node. The only operator left to deal with is the multiple
+consumer function \texttt{zipWith}, which has historically proved difficult for
+fusion systems to handle. Nevertheless, let us begin by extending
+\texttt{mapD} in the obvious way and see how far we can get.
+
+% \begin{lstlisting}[style=haskell]
+% backpermuteD
+%     :: (Shape sh, Shape sh', Elt e)
+%     => Exp        aenv sh'
+%     -> Fun        aenv (sh' -> sh)
+%     -> DelayedAcc aenv (Array sh  e)
+%     -> DelayedAcc aenv (Array sh' e)
+% backpermuteD = ...
+% \end{lstlisting}
+%
+% backpermuteD sh' p acc = case acc of
+%   Step env _ ix f a     -> Step env (sinkE env sh') (ix `compose` sinkF env p) f a
+%   Yield env _ f         -> Yield env (sinkE env sh') (f `compose` sinkF env p)
+%   Done env a            -> Step env' (sinkE env' sh') (sinkF env' p) identity ZeroIdx
+%     where env' = env `PushEnv` a
+%
+%
+\begin{lstlisting}[style=haskell]
+zipWithD :: (Shape sh, Elt a, Elt b, Elt c)
+         => Fun        aenv (a -> b -> c)
+         -> DelayedAcc aenv (Array sh a)
+         -> DelayedAcc aenv (Array sh b)
+         -> DelayedAcc aenv (Array sh c)
+zipWithD f acc1 acc2 =
+  case acc1 of
+    Done env1 a1 -> case acc2 of        -- env1 :: Extend aenv aenv'1
+      Done env2 a2 -> ...               -- env2 :: Extend aenv aenv'2
+\end{lstlisting}
+%
+Even for the simplest case, not very far. The problem is difficult to see, but
+lies with the existentially quantified environment that the fragments are
+defined in terms of. We have:
+%
+\begin{lstlisting}[style=haskell]
+env1 :: Extend aenv aenv'1
+env2 :: Extend aenv aenv'2
+
+a1   :: PreOpenAcc OpenAcc aenv'1 a
+a1   :: PreOpenAcc OpenAcc aenv'2 b
+\end{lstlisting}
+%
+What is the relationship between these skolem type variables \texttt{aenv'1} and
+\texttt{aenv'2}? Unfortunately nothing. Can we linearise the types somehow, say
+be concatenating our witnesses?
+%
+\begin{lstlisting}[style=haskell]
+cat :: Extend env env' -> Extend env env'' -> Extend env ???
+\end{lstlisting}
+%
+What should be the type of the result? We could try concatenating the types
+using type families.
+%
+\begin{lstlisting}[style=haskell]
+type family Cat env env' :: *
+type instance Cat env ()       = env
+type instance Cat env (env',s) = (Cat env env', s)
+\end{lstlisting}
+%
+However this ends up leading to difficulties in other parts of the
+implementation. Since \texttt{zipWith} is the only function of its type in the
+core language, let us take a different route and treat it specially. The trick
+is to linearly construct the extended environments by delaying the second array
+after lifting it into the existentially quantified environment of the first.
+%
+\begin{lstlisting}[style=haskell]
+zipWithD :: (Shape sh, Elt a, Elt b, Elt c)
+         => Fun                aenv (a -> b -> c)
+         -> PreOpenAcc OpenAcc aenv (Array sh a)
+         -> PreOpenAcc OpenAcc aenv (Array sh b)
+         -> DelayedAcc         aenv (Array sh c)
+zipWithD f acc1 acc2 =
+  case delay acc1 of
+    Done env1 a1 -> case delay (liftA env1 a2) of
+      Done env2 a2 -> ...
+\end{lstlisting}
+%
+Where \texttt{liftA} shifts all array environment variables of the term
+according to the witness \texttt{env1} in the manner discussed previously. Now
+the \texttt{Extend} terms have the following existential types:
+%
+\begin{lstlisting}[style=haskell]
+env1 :: Extend aenv   aenv'1
+env2 :: Extend aenv'1 aenv'2
+\end{lstlisting}
+%
+which are straightforward to combine using a standard snoc-list append:
+%
+\begin{lstlisting}[style=haskell]
+cat :: Extend env env' -> Extend env' env'' -> Extend env env''
+\end{lstlisting}
+%
+Whew!
 
 
 
